Actualización a AFirma 3.2 y BootLoader 2.0. Inicio de la sincronización con UJI
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/trunk/project@6 dcdbb401-323c-49cf-88a0-803402807c85