@@ -2,19 +2,18 @@
  * Este fichero forma parte del Cliente @firma. 
  * El Cliente @firma es un applet de libre distribución cuyo código fuente puede ser consultado
  * y descargado desde www.ctt.map.es.
- * Copyright 2009,2010 Gobierno de España
- * Este fichero se distribuye bajo las licencias EUPL versión 1.1  y GPL versión 3, o superiores, según las
- * condiciones que figuran en el fichero 'LICENSE.txt' que se acompaña.  Si se   distribuyera este 
+ * Copyright 2009,2010 Ministerio de la Presidencia, Gobierno de España (opcional: correo de contacto)
+ * Este fichero se distribuye bajo las licencias EUPL versión 1.1  y GPL versión 3  según las
+ * condiciones que figuran en el fichero 'licence' que se acompaña.  Si se   distribuyera este 
  * fichero individualmente, deben incluirse aquí las condiciones expresadas allí.
  */
-
 
 package es.gob.afirma.cliente.utilidades.browser;
 
 import java.io.BufferedOutputStream;
-import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
@@ -24,28 +23,22 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.logging.Logger;
 
-import es.gob.afirma.misc.AOCryptoUtil;
-import es.gob.aoclasses.GraphicalFileInputStream;
+import org.apache.commons.codec.binary.Base64;
 
+public final class FirmadorWeb {
 
-public class FirmadorWeb
-{
+    public static class FirmaWeb {
 
-    public static class FirmaWeb
-    {
-        //private final byte[] hash;
-        //private final String hashAlgorithm;
         public final File   tmpWebDataFile;
         
-        FirmaWeb(byte[] hash, String hashAlgorithm, File   tmpWebDataFile)
-        {
-            //this.hash= hash;
-            //this.hashAlgorithm= hashAlgorithm;
+        FirmaWeb(final byte[] hash, final String hashAlgorithm, final File tmpWebDataFile) {
             this.tmpWebDataFile= tmpWebDataFile;
         }
     }
 
-    FirmaWeb firmar(String html, Attachment[] attachments, String hashAlgorithm) throws IOException, NoSuchAlgorithmException
+    FirmaWeb firmar(final String html, 
+    		        final Attachment[] attachments, 
+    		        final String hashAlgorithm) throws IOException, NoSuchAlgorithmException
     {
         byte[] hash;
         File tmpWebDataFile= File.createTempFile("afirma5_firmaweb", ".tmp");
@@ -73,14 +66,13 @@ public class FirmadorWeb
                 if(attach.url.trim().length()>0)
                 {
                     // Escribimos el tag de apertura
-                    String openTag= "<afirma type='filecontent' path='"+URLEncoder.encode(attach.url, "UTF-8")+"'><!--\n";
+                    final String openTag= "<afirma type='filecontent' path='"+URLEncoder.encode(attach.url, "UTF-8")+"'><!--\n";
                     dos.write(openTag.getBytes());
                     dos.flush();
     
                     // Leemos el fichero con ventana gráfica
-                    GraphicalFileInputStream attachIS= attach.getContentInputStream();
-                    try
-                    {
+                    final FileInputStream attachIS= attach.getContentInputStream();
+                    try {
                         // Volcamos el fichero en b64
                         Logger.getLogger("es.map,afirma").info("Tama\u00F1o del buffer: "+1024);
                         int nBytes;
@@ -93,7 +85,7 @@ public class FirmadorWeb
                         	Logger.getLogger("es.gob.afirma").warning("No se pudo cerrar el flujo del fichero adjunto");
                         }                     
                 		
-                        new AOCryptoUtil.RawBASE64Encoder().encode(new ByteArrayInputStream(baos.toByteArray()), bos);
+                        bos.write(Base64.encodeBase64(baos.toByteArray()));
                         bos.flush();
                     }
                     finally
